<resources>
    <string name="app_name">Shoe Store</string>

    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="password_hint">Type your password here</string>
    <string name="login">Login</string>
    <string name="register">Register</string>

    <string name="welcome">Welcome</string>
    <string name="welcome_subtitle">Nice shoes make life easier to walk</string>
    <string name="instructions">Walk over instructions</string>
    <string name="instruction_subtitle">How to buy shoes</string>
    <string name="step_1">Step 1. Search for a product in the list.</string>
    <string name="step_2">Step 2: Find an item you like ...</string>
    <string name="step_3">Step 3: Add shoes  to your basket.</string>
    <string name="step_4">Step 4: Continue shopping or buy your product.</string>
    <string name="step_5">Step 5: Checkout and pay.</string>
    <string name="start_shopping">Start shopping</string>
    <string name="fragment_login_title">Login</string>
    <string name="fragment_welcome_title">Welcome</string>
    <string name="fragment_instruction_title">How to</string>
    <string name="fragment_shoes_title">Shoes</string>
    <string name="fragment_detail_title">Details</string>
    <string name="shoe_details_button">Shoe details button</string>

    <string name="shoe_name">Name</string>
    <string name="shoe_size">Size</string>
    <string name="shoe_company">Company</string>
    <string name="shoe_description">Description</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Logout</string>
</resources>
