<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.udacity.shoestore.ui.LoginFragment"
        android:label="@string/fragment_login_title"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment"
            app:launchSingleTop="true" />
    </fragment>
    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.udacity.shoestore.ui.WelcomeFragment"
        android:label="@string/fragment_welcome_title"
        tools:layout="@layout/fragment_welcome" >
        <action
            android:id="@+id/action_welcomeFragment_to_instructionFragment"
            app:destination="@id/instructionFragment" />
    </fragment>
    <fragment
        android:id="@+id/instructionFragment"
        android:name="com.udacity.shoestore.ui.InstructionFragment"
        android:label="@string/fragment_instruction_title"
        tools:layout="@layout/fragment_instruction" >
        <action
            android:id="@+id/action_instructionFragment_to_shoesFragment"
            app:destination="@id/shoesFragment" />
    </fragment>
    <fragment
        android:id="@+id/shoesFragment"
        android:name="com.udacity.shoestore.ui.ShoesFragment"
        android:label="@string/fragment_shoes_title"
        tools:layout="@layout/fragment_shoes" />
</navigation>