<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.DetailFragment">
    
    <data>
        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />
        <variable
            name="detailFragment"
            type="com.udacity.shoestore.ui.DetailFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="120dp" />

        <TextView
            android:id="@+id/shoeNameLabel"
            style="@style/label_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:labelFor="@id/shoeNameInput"
            android:text="@string/shoe_name"
            app:layout_constraintBottom_toBottomOf="@+id/shoeNameInput"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/shoeNameInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:importantForAutofill="no"
            android:inputType="text"
            android:text="@={shoe.name}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/shoeSizeLabel"
            style="@style/label_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:labelFor="@id/shoeSizeInput"
            android:text="@string/shoe_size"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/shoeNameInput" />

        <EditText
            android:id="@+id/shoeSizeInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:text="@={`` + shoe.size}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/shoeNameInput" />

        <TextView
            android:id="@+id/shoe_company_label"
            style="@style/label_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:labelFor="@id/shoeCompanyInput"
            android:text="@string/shoe_company"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/shoeSizeInput" />

        <EditText
            android:id="@+id/shoeCompanyInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:importantForAutofill="no"
            android:inputType="text"
            android:text="@={shoe.company}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/shoeSizeInput" />

        <TextView
            android:id="@+id/shoe_description_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:labelFor="@id/shoeDescriptionInput"
            android:text="@string/shoe_description"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/shoeCompanyInput" />

        <EditText
            android:id="@+id/shoeDescriptionInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:importantForAutofill="no"
            android:inputType="text"
            android:text="@={shoe.description}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/shoeCompanyInput" />

        <Button
            android:id="@+id/saveBtn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/save"
            android:onClick="@{() -> detailFragment.saveShoe(shoe)}"
            app:layout_constraintBottom_toBottomOf="@+id/cancelBtn"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/cancelBtn" />

        <Button
            android:id="@+id/cancelBtn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:text="@android:string/cancel"
            app:layout_constraintStart_toEndOf="@+id/saveBtn"
            app:layout_constraintTop_toBottomOf="@+id/shoeDescriptionInput" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>